[package]
name = "todo_list"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
futures = "0.3.31"
mongodb = "3.2.4"
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.14"
tokio = {version="1.47.1", features=["full"]}
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
