[package]
name = "todo_list"
version = "0.1.0"
edition = "2024"


[dependencies]

anyhow = "1.0.99"
axum = "0.8.4"
axum-extra = "0.9.2"
async-trait = "0.1.80"
bcrypt = "0.15.1"
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.31"
headers = "0.4.0"
jsonwebtoken = "9.3.0"
mongodb = "3.2.4"
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.14"
tokio = {version="1.47.1", features=["full"]}
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde_json = "1.0"

[dev-dependencies]
chrono = "0.4.41"
reqwest = { version = "0.12.23", features = ["json"] }
serde_json = "1.0.143"
